Update DNS Record module

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -410,6 +410,8 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/dns_zone_records/dns_zone_records.module.js"></script>
 <script type="text/javascript" src="js/portal/dns_zone_records/dns_zone_records.routes.js"></script>
 <script type="text/javascript" src="js/portal/dns_zone_records/controller/dns_zone_recordsCrud.controller.js"></script>
+<script type="text/javascript" src="js/portal/dns_zone_records/dns-zone-record-answer/dnsZoneRecordAnswer.directive.js"></script>
+
 <!-- //DNS Zone Records -->
 <!-- DNS Zones -->
 <script type="text/javascript" src="js/portal/dns_zones/dns_zones.module.js"></script>
