--- a/code/dev/parts/dns_zones/edit.html
+++ b/code/dev/parts/dns_zones/edit.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-12">
     <h2 class="pull-left page-title">
-      Edit Zone Properties {{model.zone}}
+      Edit Zone Properties <strong>{{model.zone}}</strong>
     </h2>
   </div>
 </div>
